--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -240,7 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here. Add cells as needed."
+    "# Your code here. Add cells as needed.\n",
+    "#Hello World"
    ]
   },
   {
