--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR FULL NAME\n",
+    "Pronob Sarker\n",
     "\n",
     " - Collaborator 1\n",
     " - Collaborator 2\n",
@@ -698,7 +698,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datascience",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -712,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
