--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "      <td>2.430771</td>\n",
        "      <td>-0.252092</td>\n",
        "      <td>0.109610</td>\n",
-       "      <td>244.349429</td>\n",
+       "      <td>263.442915</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -132,7 +132,7 @@
        "      <td>-0.591637</td>\n",
        "      <td>0.187603</td>\n",
        "      <td>-0.329870</td>\n",
-       "      <td>-66.739816</td>\n",
+       "      <td>-74.806972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -141,7 +141,7 @@
        "      <td>-0.358829</td>\n",
        "      <td>0.603472</td>\n",
        "      <td>-1.664789</td>\n",
-       "      <td>-154.409110</td>\n",
+       "      <td>-168.003437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -150,7 +150,7 @@
        "      <td>1.857331</td>\n",
        "      <td>-1.511180</td>\n",
        "      <td>0.644848</td>\n",
-       "      <td>194.236600</td>\n",
+       "      <td>176.725344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -159,7 +159,7 @@
        "      <td>-0.871879</td>\n",
        "      <td>-0.422508</td>\n",
        "      <td>0.996440</td>\n",
-       "      <td>-87.092471</td>\n",
+       "      <td>-91.477815</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -177,7 +177,7 @@
        "      <td>0.741750</td>\n",
        "      <td>1.130381</td>\n",
        "      <td>-0.189154</td>\n",
-       "      <td>67.307896</td>\n",
+       "      <td>97.111438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>296</th>\n",
@@ -186,7 +186,7 @@
        "      <td>0.037560</td>\n",
        "      <td>0.697767</td>\n",
        "      <td>-0.506700</td>\n",
-       "      <td>-90.781843</td>\n",
+       "      <td>-98.300255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>297</th>\n",
@@ -195,7 +195,7 @@
        "      <td>-1.360830</td>\n",
        "      <td>0.438510</td>\n",
        "      <td>-0.675455</td>\n",
-       "      <td>-150.392513</td>\n",
+       "      <td>-138.801803</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>298</th>\n",
@@ -204,7 +204,7 @@
        "      <td>-0.400579</td>\n",
        "      <td>-0.621525</td>\n",
        "      <td>0.217709</td>\n",
-       "      <td>11.909130</td>\n",
+       "      <td>9.632172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>299</th>\n",
@@ -213,7 +213,7 @@
        "      <td>-0.128005</td>\n",
        "      <td>1.075307</td>\n",
        "      <td>0.665557</td>\n",
-       "      <td>49.345572</td>\n",
+       "      <td>50.859900</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -222,22 +222,22 @@
       ],
       "text/plain": [
        "           x1        x2        x3        x4        x5           y\n",
-       "0    0.441227 -0.330870  2.430771 -0.252092  0.109610  244.349429\n",
-       "1    1.582481 -0.909232 -0.591637  0.187603 -0.329870  -66.739816\n",
-       "2   -1.192765 -0.204877 -0.358829  0.603472 -1.664789 -154.409110\n",
-       "3   -0.700179  1.151391  1.857331 -1.511180  0.644848  194.236600\n",
-       "4   -0.980608 -0.856853 -0.871879 -0.422508  0.996440  -87.092471\n",
+       "0    0.441227 -0.330870  2.430771 -0.252092  0.109610  263.442915\n",
+       "1    1.582481 -0.909232 -0.591637  0.187603 -0.329870  -74.806972\n",
+       "2   -1.192765 -0.204877 -0.358829  0.603472 -1.664789 -168.003437\n",
+       "3   -0.700179  1.151391  1.857331 -1.511180  0.644848  176.725344\n",
+       "4   -0.980608 -0.856853 -0.871879 -0.422508  0.996440  -91.477815\n",
        "..        ...       ...       ...       ...       ...         ...\n",
-       "295  0.423162 -0.988746  0.741750  1.130381 -0.189154   67.307896\n",
-       "296 -2.075862 -0.911934  0.037560  0.697767 -0.506700  -90.781843\n",
-       "297  1.006915 -0.513603 -1.360830  0.438510 -0.675455 -150.392513\n",
-       "298  1.310846  1.089519 -0.400579 -0.621525  0.217709   11.909130\n",
-       "299  1.133511  0.131756 -0.128005  1.075307  0.665557   49.345572\n",
+       "295  0.423162 -0.988746  0.741750  1.130381 -0.189154   97.111438\n",
+       "296 -2.075862 -0.911934  0.037560  0.697767 -0.506700  -98.300255\n",
+       "297  1.006915 -0.513603 -1.360830  0.438510 -0.675455 -138.801803\n",
+       "298  1.310846  1.089519 -0.400579 -0.621525  0.217709    9.632172\n",
+       "299  1.133511  0.131756 -0.128005  1.075307  0.665557   50.859900\n",
        "\n",
        "[300 rows x 6 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,17 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficients:  [-41732.69762962    206.9220434  103236.95875143]\n",
-      "intercept:  -592758.1153276186\n",
-      "Mean Squared Error: 62002256049.32\n",
-      "R2 score: 0.55\n"
+      "coefficients:  [21.34500494 24.54201066 94.39661793  7.41224321 50.53717397]\n",
+      "intercept:  -8.853368707739648\n",
+      "Mean Squared Error: 840.13\n",
+      "R2 score: 0.92\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
