--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -367,13 +367,12 @@
     "             columns = column_names)\n",
     "reg2_df['y'] = y\n",
     "\n",
-    "\n",
     "print_model(bias, coef, column_names, model_name = 'True Model')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -396,35 +395,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "positional indexers are out-of-bounds",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[57], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m idx \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m9\u001b[39m]\n\u001b[1;32m      4\u001b[0m candidate_idx \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m9\u001b[39m]  \u001b[38;5;66;03m# x2=1, x3=2, x5=4, x6=5, x10=9\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m Z \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39miloc[:, candidate_idx]   \u001b[38;5;66;03m# Select columns x2, x3, x5, x6, x10\u001b[39;00m\n\u001b[1;32m      6\u001b[0m Z_train, Z_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(Z, y, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m      8\u001b[0m model_LR \u001b[38;5;241m=\u001b[39m LinearRegression()\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexing.py:1097\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1095\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_is_scalar_access(key):\n\u001b[1;32m   1096\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_get_value(\u001b[38;5;241m*\u001b[39mkey, takeable\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_takeable)\n\u001b[0;32m-> 1097\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_tuple(key)\n\u001b[1;32m   1098\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1099\u001b[0m     \u001b[38;5;66;03m# we by definition only have the 0th axis\u001b[39;00m\n\u001b[1;32m   1100\u001b[0m     axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maxis \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m0\u001b[39m\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexing.py:1594\u001b[0m, in \u001b[0;36m_iLocIndexer._getitem_tuple\u001b[0;34m(self, tup)\u001b[0m\n\u001b[1;32m   1593\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_getitem_tuple\u001b[39m(\u001b[38;5;28mself\u001b[39m, tup: \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m-> 1594\u001b[0m     tup \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_tuple_indexer(tup)\n\u001b[1;32m   1595\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m suppress(IndexingError):\n\u001b[1;32m   1596\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_lowerdim(tup)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexing.py:904\u001b[0m, in \u001b[0;36m_LocationIndexer._validate_tuple_indexer\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    902\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(key):\n\u001b[1;32m    903\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 904\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_key(k, i)\n\u001b[1;32m    905\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    906\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    907\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLocation based indexing can only have \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    908\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_valid_types\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] types\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    909\u001b[0m         ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexing.py:1516\u001b[0m, in \u001b[0;36m_iLocIndexer._validate_key\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1514\u001b[0m     \u001b[38;5;66;03m# check that the key does not exceed the maximum size of the index\u001b[39;00m\n\u001b[1;32m   1515\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(arr) \u001b[38;5;129;01mand\u001b[39;00m (arr\u001b[38;5;241m.\u001b[39mmax() \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m len_axis \u001b[38;5;129;01mor\u001b[39;00m arr\u001b[38;5;241m.\u001b[39mmin() \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m-\u001b[39mlen_axis):\n\u001b[0;32m-> 1516\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mIndexError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpositional indexers are out-of-bounds\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1517\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1518\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCan only index by location with a [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_valid_types\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: positional indexers are out-of-bounds"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated Model:\n",
+      " y = -15.23 + 59.49*x1 + 79.55*x2 + 10.04*x4 + 59.08*x5 + 176.93*x10\n",
+      "Mean Squared Error: 11.89\n",
+      "R2 score: 0.79\n",
+      "coeff [ 59.49259678  79.55496408  10.04297335  59.07923101 176.93213424]\n",
+      "intercept -15.234206880860656\n"
      ]
     }
    ],
    "source": [
-    "10,6,5,3,2 \n",
-    "idx = [0, 1, 3, 4, 9]\n",
+    "#10,6,5,3,2 \n",
+    "# idx = [0, 1, 3, 4, 9]\n",
     "\n",
-    "candidate_idx = [1, 2, 4, 5, 9]  # x2=1, x3=2, x5=4, x6=5, x10=9\n",
-    "Z = X.iloc[:, candidate_idx]   # Select columns x2, x3, x5, x6, x10\n",
-    "Z_train, Z_test, y_train, y_test = train_test_split(Z, y, test_size=0.2, random_state=5)\n",
+    "# candidate_idx = [1, 2, 4, 5, 9]  # x2=1, x3=2, x5=4, x6=5, x10=9\n",
+    "# Z = X.iloc[:, candidate_idx]   # Select columns x2, x3, x5, x6, x10\n",
+    "# Z_train, Z_test, y_train, y_test = train_test_split(Z, y, test_size=0.2, random_state=5)\n",
+    "\n",
+    "# model_LR = LinearRegression()\n",
+    "# model_LR.fit(Z_train, y_train)\n",
+    "\n",
+    "# # Predict and calculate metrics\n",
+    "# y_pred = model_LR.predict(Z_test)\n",
+    "# mse = mean_squared_error(y_test, y_pred)\n",
+    "# r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "# print(f'Mean Squared Error: {mse:.2f}')\n",
+    "# print(f'R2 score: {r2:.2f}')\n",
+    "\n",
+    "# Corrected Feature Selection (x2, x3, x5, x6 without synthetic x10)\n",
+    "candidate_idx = [0, 1, 3, 4, 9]  \n",
+    "Z= X[:, candidate_idx]\n",
+    "Z_names = [column_names[i] for i in candidate_idx]\n",
+    "\n",
+    "# Split with different random_state than data generation\n",
+    "Z_train, Z_test, y_train, y_test = train_test_split(Z, y, test_size=0.2, random_state=42)\n",
     "\n",
     "model_LR = LinearRegression()\n",
-    "model_LR.fit(Z_train, y_train)\n",
+    "model_LR.fit(Z_train, y_train) \n",
+    "print_model(model_LR.intercept_, model_LR.coef_, Z_names, model_name = 'Estimated Model')\n",
     "\n",
     "# Predict and calculate metrics\n",
     "y_pred = model_LR.predict(Z_test)\n",
@@ -432,7 +448,10 @@
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
     "print(f'Mean Squared Error: {mse:.2f}')\n",
-    "print(f'R2 score: {r2:.2f}')\n"
+    "print(f'R2 score: {r2:.2f}')\n",
+    "print(\"coeff\",  model_LR.coef_)\n",
+    "print(\"intercept\", model_LR.intercept_)\n",
+    "\n"
    ]
   },
   {
@@ -442,15 +461,16 @@
     "#### Your written answers here\n",
     "\n",
     "What are your model parameters?\n",
-    " - coefficient:\n",
-    " - intercept: \n",
+    "- coefficient: [ 59.49259678  79.55496408  10.04297335  59.07923101 176.93213424]\n",
+    "- intercept -15.234206880860656\n",
     "\n",
     "Which features (x1, x2...) were significant? Which were co-linear?\n",
     " - Significant feature: x10,x6,x5,x3,x2.\n",
     "- co-linear  feature: x3 and x10, y and x10\n",
     " \n",
     "What were your MSE and R^2?\n",
-    " - \n",
+    " - R2 error is: 0.79\n",
+    " - MSE is : 11.89\n",
     "\n"
    ]
   },
@@ -463,15 +483,6 @@
     "For this problem, you'll using housing data from King County, Washington (included as kc_housing.csv).\n",
     "\n",
     "You should refer to the class notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "housing_df = pd.read_csv('kc_house_data.csv')\n"
    ]
   },
   {
